--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^4.12.0",
+    "@auth0/auth0-react": "^2.8.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
