--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.8.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
