--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.11.0",
     "lucide-react": "^0.562.0",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "zustand": "^5.0.9"
